--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,27 @@
 body{
       font-family:arial;color:#333;font-size:11px;
+      background: #EEE;
     }
 
-div:hover
+
+    div:hover
 {
-  border-color:orange;
+  border-color:#006C51;
 }
 
 .group, .match, .score, .team, .img24x24{
       float:left;overflow:hidden;
     }
 .groupTit{
-      background: #AADDAA;
+     background: #00A67C ;
       height:20px;
+      line-height:20px;
+      color: #FFF;
+      font-weight: bold;
     }
 .group{
-      width:250px;
-      border:solid 2px #666;
+      width:245px;
+      border:solid 2px #00A67C ;
       margin:1px;
       -webkit-transition: height 1s; /* For Safari 3.1 to 6.0 */
       transition: height 1s;
@@ -34,7 +39,7 @@ div:hover
       height:22px;
       line-height: 20px;
       margin-top:2px;
-      background:#DDD;
+      background:#FF9E00;
       border:solid 1px white;
       text-align: center;
       margin-right:1px;
@@ -54,7 +59,7 @@ div:hover
 #world
 {  
   margin:auto;
-  width: 1024px;
+  width: 1004px;
   margin-bottom: 10px;
   cursor:pointer;
 }
@@ -62,7 +67,7 @@ div:hover
 .group:nth-child(9),.group:nth-child(10), .group:nth-child(11), .group:nth-child(12), .group:nth-child(13)
 {
   float: none;
-  width: 1018px;
+  width: 998px;
   margin: auto;
   text-align: center;
 }
@@ -73,10 +78,14 @@ div:hover
       height:30px;
       line-height:30px;
       text-align: center;
-      background:#DDD;
+      background:#FF9E00;
       margin:auto;
       cursor:pointer;
     }
+.save:hover
+{
+   background:#EF002A;
+}
 
 .collapse
 {
