--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,22 @@
 body{
-      font-family:arial;color:#333;font-size:11px;
+      font-family:arial;
+      color:#333;
+      font-size:11px;
       background: #EEE;
     }
 
 
-    div:hover
+div:hover
 {
   border-color:#006C51;
 }
 
 .group, .match, .score, .team, .img24x24{
-      float:left;overflow:hidden;
+      float:left;
+      overflow:hidden;
     }
 .groupTit{
-     background: #00A67C ;
+     background: #455 ;
       height:20px;
       line-height:20px;
       color: #FFF;
@@ -21,28 +24,31 @@ body{
     }
 .group{
       width:245px;
-      border:solid 2px #00A67C ;
+      border:solid 2px #455 ;
       margin:1px;
       -webkit-transition: height 1s; /* For Safari 3.1 to 6.0 */
       transition: height 1s;
       height:200px;
+       background: #688 ;
+       color:#FFF;
 
     }
 .match{
       width:55px;
       height:30px;
       line-height:30px;
-      color:#666;
+      color:#DDD;
     }
 .score{
       width:21px;
       height:22px;
       line-height: 20px;
       margin-top:2px;
-      background:#FF9E00;
+      background:#DDD;
       border:solid 1px white;
       text-align: center;
       margin-right:1px;
+      color: #222;
     }
 .img24x24
     {
@@ -63,7 +69,14 @@ body{
   margin-bottom: 10px;
   cursor:pointer;
 }
-
+#dashboard
+{
+  font-size: 60px;
+  color:#666;
+  font-weight: bold;
+  text-align: right;
+  margin-right: 150px;
+}
 .group:nth-child(9),.group:nth-child(10), .group:nth-child(11), .group:nth-child(12), .group:nth-child(13)
 {
   float: none;
@@ -78,13 +91,13 @@ body{
       height:30px;
       line-height:30px;
       text-align: center;
-      background:#FF9E00;
+      background:orange;
       margin:auto;
       cursor:pointer;
     }
 .save:hover
 {
-   background:#EF002A;
+   background:#DDD;
 }
 
 .collapse
