--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,7 @@ div:hover
 .myDataFemale{color:#DD9988;}
 .myDataMale{color:#222266;}
 
+.myData{float:left;}
 .save{
       width:75px;
       overflow:hidden;
