--- a/css/style.css
+++ b/css/style.css
@@ -180,3 +180,12 @@ div:hover
   height: 370px;
   margin: auto;
 }
+
+.locker
+{
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.4);
+  display: none;
+}
