--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,7 @@ div:hover
       background:orange;
       margin:auto;
       cursor:pointer;
+      display: none;
     }
 .save:hover
 {
@@ -189,6 +190,10 @@ div:hover
   position: fixed;
   width: 100%;
   height: 100%;
-  background: rgba(0,0,0,0.4);
+  background: rgba(0,0,0,0.8);
   display: none;
+  line-height: 600px;
+  text-align:center;
+  font-size: 60px;
+  color:#CCC;
 }
